# heurika

./: CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp
src/gui/: appmenubar.cpp  appmenubar.h  fileview.cpp  fileview.h  mainmenubar.cpp  mainmenubar.h  mainwindow.cpp  mainwindow.h  navbar.cpp  navbar.h  placesview.cpp  placesview.h
